# ft_linear_regression

./: .gitignore  Makefile  evaluate.py  model_weights.json  predict.py  pyproject.toml  pyrightconfig.json  requirements.txt  train.py
data/: data_test.csv  data_test_salary.csv  data_with_nans.csv  data_with_strings.csv  one_row.csv  valid_1_standard.csv  valid_2_positive.csv  valid_3_noisy.csv  valid_4_large.csv  wrong_headers.csv
model/: model_weights.json
src/: error_functions.py  main.py  predict.py  train.py
src/comparison/: __init__.py  evaluators.py  models.py
src/evaluator/: mean_absolute_error.py  r_squared.py
src/ft_linear_regression.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/loss_functions/: mean_absolute_error.py  mean_squared_error.py  protocol.py  protocol_loss_fn.py  sum_squared_error.py
src/math_dissection/: math_dissect.ipynb  normalization.ipynb
src/model/: simple_linear_regression.py
src/normalizers/: minmax_normalizer.py  protocol_normalizers.py  z_score.py
src/tests/: test_data_edge_cases.py  test_linear_regression.py  test_loss_functions.py  test_normalizers.py
src/utils/: data_generation.py  load.py  read_model.py
src/visualisation/: data_graph.py  scaling_viz.py
