[project]
name = "ft-linear-regression"
version = "0.1.0"
description = "An introduction to machine learning with linear regression"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pydantic",
    "python-dotenv",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "ipywidgets",
    "matplotlib-inline",
    "mypy",
    "pandas-stubs",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: isort, N: pep8-naming, UP: pyupgrade, PL: Pylint subset
select = ["E", "F", "I", "N", "UP", "PL"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
